--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
             - db_postgres
             
     server:
-        image: ekedani/ipz-lab-server:latest
+        image: ekedani/ipz-lab-server:2.0
         ports:
             - "80:3000"
         environment:
