add file upload via volumes

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -30,4 +30,5 @@ USER node
 FROM node:alpine As production
 COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
 COPY --chown=node:node --from=build /usr/src/app/dist ./dist
+VOLUME /uploads
 CMD [ "node", "dist/main.js" ]
